# diy_soft_gripper_driver

./: Dockerfile  README.md  dev.Dockerfile  run.sh  run_dev.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/diy_robotics_gripper/share/diy_robotics_gripper/: package.bash  package.zsh
install/diy_soft_gripper_driver/include/diy_soft_gripper_driver/: DataFormat.hpp  RobotConnection.hpp
install/diy_soft_gripper_driver/lib/: client  server
install/diy_soft_gripper_driver/lib/diy_soft_gripper_driver/: client  server
install/diy_soft_gripper_driver/share/ament_index/resource_index/package_run_dependencies/: diy_soft_gripper_driver
install/diy_soft_gripper_driver/share/diy_soft_gripper_driver/: package.sh  package.xml
install/diy_soft_gripper_driver/share/diy_soft_gripper_driver/launch/: controller.launch.py
install/gripper_interface/include/gripper_interface/gripper_interface/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/gripper_interface/include/gripper_interface/gripper_interface/srv/: gripper.h
install/gripper_interface/include/gripper_interface/gripper_interface/srv/detail/: gripper__builder.hpp  gripper__functions.c  gripper__functions.h  gripper__rosidl_typesupport_introspection_cpp.hpp  gripper__type_support.cpp  gripper__type_support.h
install/gripper_interface/local/lib/python3.10/dist-packages/gripper_interface/: _gripper_interface_s.ep.rosidl_typesupport_introspection_c.c
install/gripper_interface/local/lib/python3.10/dist-packages/gripper_interface-0.0.0-py3.10.egg-info/: PKG-INFO
install/gripper_interface/local/lib/python3.10/dist-packages/gripper_interface/srv/: _gripper.py
install/gripper_interface/share/gripper_interface/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gripper_interface/share/gripper_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_gripper_interface__rosidl_generator_cExport.cmake  export_gripper_interface__rosidl_generator_cppExport.cmake  export_gripper_interface__rosidl_typesupport_fastrtps_cExport.cmake  gripper_interface__rosidl_typesupport_cExport-noconfig.cmake  gripper_interface__rosidl_typesupport_cExport.cmake  gripper_interface__rosidl_typesupport_cppExport-noconfig.cmake  gripper_interface__rosidl_typesupport_cppExport.cmake  gripper_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  gripper_interface__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
log/: latest_build  latest_list
src/diy_soft_gripper_driver/: CMakeLists.txt  package.xml
src/diy_soft_gripper_driver/include/launch/: controller.launch.py
src/diy_soft_gripper_driver/launch/: controller.launch.py
src/diy_soft_gripper_driver/src/: gripper_service_client.cpp  gripper_service_client_single_request.cpp  gripper_service_server.cpp  gripper_service_test_client.cpp
src/diy_soft_gripper_driver/srv/: Gripper.srv
src/gripper_interface/: CMakeLists.txt  package.xml
src/gripper_srv_interface/: package.xml
